[tool.poetry]
name = "disser"
version = "0.1.0"
description = ""
authors = ["s-sorokaty <sorokaty0824@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.46"
pymysql = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
